qc pass: bgp change in destination prefer
qc pass: bgp change in destination prefer with soft-reconfig
qc pass: bgp routepolicy filtering with destination prefer
qc pass: bgp routepolicy filtering with destination prefer with soft-reconfig
---------------------------------- 2026-02-09 07:59:56 26.2.9
no qc pass: isis over ppp
no qc pass: bgp aspa rpki invalid
no qc pass: ibgp rr otherl3evpns prefix movement
no qc pass: vpls/ldp with ingress rtfilter
no qc pass: ppp over tcp with asymmetric sack
no qc pass: ppp no local address
no qc pass: ppp with packet over txtls
no qc pass: ppp with packet over tls
no qc pass: ppp over gtp
failed: ppp over gtp
failed: ppp with packet over tls
failed: ppp with packet over txtls
failed: ppp no local address
failed: ppp over tcp with asymmetric sack
failed: vpls/ldp with ingress rtfilter
failed: ibgp rr otherl3evpns prefix movement
failed: bgp aspa rpki invalid
failed: isis over ppp
---------------------------------- 2026-02-09 09:21:38 26.2.9
no failed: isis over ppp
no failed: bgp aspa rpki invalid
no failed: ibgp rr otherl3evpns prefix movement
no failed: vpls/ldp with ingress rtfilter
no failed: ppp over tcp with asymmetric sack
no failed: ppp no local address
no failed: ppp with packet over txtls
no failed: ppp with packet over tls
no failed: ppp over gtp
qc pass: ppp over gtp
qc pass: ppp with packet over tls
qc pass: ppp with packet over txtls
qc pass: ppp no local address
qc pass: ppp over tcp with asymmetric sack
qc pass: vpls/ldp with ingress rtfilter
qc pass: ibgp rr otherl3evpns prefix movement
qc pass: bgp aspa rpki invalid
qc pass: isis over ppp
---------------------------------- 2026-02-09 11:39:57 26.2.9
no qc pass: ospf point2multipoint nonbroadcast connection
failed: ospf point2multipoint nonbroadcast connection
---------------------------------- 2026-02-09 12:49:13 26.2.9
no failed: ospf point2multipoint nonbroadcast connection
qc pass: ospf point2multipoint nonbroadcast connection